fazendo a exclusão de arquivos que não está sendo usados, colocando o entregador e o cliente, para incrementar as suas funcionalidades.

--- a/DistribuidoraAPI/appsettings.json
+++ b/DistribuidoraAPI/appsettings.json
@@ -1,4 +1,13 @@
 {
+
+  "ConnectionStrings": {
+  "DefaultConnection": "server=localhost;database=DistribuidoraDB;user=root;password="
+  },
+  "Jwt": {
+    "Key": "sua_chave_secreta_aqui",
+    "Issuer": "DistribuidoraAPI",
+    "Audience": "DistribuidoraAPI"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,4 +15,5 @@
     }
   },
   "AllowedHosts": "*"
+  
 }
